# research

./: .gitignore  CMakeLists.txt  clear_build.bat  generate_vs_solution.bat
etc/: inFile.txt  outFile.txt
src/: CMakeLists.txt
src/Coursera/: CMakeLists.txt  Coursera.cpp  Coursera.h  WhiteBelt.cpp  WhiteBelt.h  main.cpp
src/Geekbrains/: CMakeLists.txt  Geekbrains.cpp  Geekbrains.h  main.cpp
src/Stroustrup/: CMakeLists.txt  Chrono.cpp  GraphMainWindow.cpp  GraphMainWindow.h  Stroustrup.cpp  Stroustrup.h  main.cpp
src/Stroustrup2/: CMakeLists.txt  Consts.h  HomeWork.cpp  HomeWork.h  Inheritance.cpp  Inheritance.h  SVector.cpp  SVector.h  Stroustrup2.cpp  Stroustrup2.h  main.cpp
src/StroustrupCalc/: Book.cpp  Book.h  CMakeLists.txt  Chrono.h  InOut.cpp  InOut.h  StroustrupCalc.cpp  StroustrupCalc.h  main.cpp
src/TimopheyH/: CMakeLists.txt  Graphs.cpp  Graphs.h  Timers.cpp  Timers.h  TimopheyH.cpp  TimopheyH.h  main.cpp
